Cambios de nombre del form 5

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="container-responsive">
               <span class="responsive-step">Informacion Personal</span>
               <span class="responsive-step">Informacion Laboral</span>
-              <span class="responsive-step">Ubicaciones</span>
+              <span class="responsive-step">Direcciones</span>
               <span class="responsive-step">P.E.P</span>
               <span class="responsive-step">Fotos</span>
               <div class="progress-bar-responsive" data-label="loading...">
@@ -40,7 +40,7 @@
               </div>
               <div class="step-container">
                 <div class="progress-step">3</div>
-                <p class="info-step">Ubicaciones</p>
+                <p class="info-step">Direcciones</p>
               </div>
               <div class="step-container">
                 <div class="progress-step">4</div>
@@ -144,10 +144,10 @@
             </div>
 
             <div class="titulo titulo-confirm">
-              <h3>Ubicación</h3>
+              <h3>Direcciones</h3><!---------cambair a direccion ---------->
             </div>
             <div class="card-confirm">
-              <h4 class="titulo">Ubicacion Personal</h4>
+              <h4 class="titulo">Direccion Personal:</h4>
               <div class="info-section">
                 <p class="info-text">Ciudad:</p>
                 <p class="info"></p>
@@ -168,7 +168,7 @@
                 <p class="info-text">Numero de Casa:</p>
                 <p class="info"></p>
               </div>
-              <h4 class="titulo">Ubicacion Laboral</h4>
+              <h4 class="titulo">Direccion Laboral:</h4>
               <div class="info-section">
                 <p class="info-text">Ciudad:</p>
                 <p class="info"></p>
@@ -414,7 +414,7 @@
 <!--  -------------------------------Inicio tercer formulario-------------------------------- -->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off"  >
-                  <h2 class="titulo titulo-main">Ubicación Personal</h2>
+                  <h2 class="titulo titulo-main">Direccion Personal</h2>
                   <label>
                     <span class="span-input">Ciudad</span>
                     <div class="select-container">
@@ -445,7 +445,7 @@
                     <p class="err-space"></p>
                   </label>
 
-                  <h2 class="titulo titulo-main">Ubicación Laboral</h2>
+                  <h2 class="titulo titulo-main">Direccion Laboral</h2>
 
                   <label>
                     <span class="span-input">Ciudad</span>
@@ -547,9 +547,9 @@
                     </div>
                   </div>
                   <div class="navbar-fotos">
-                    <div class="seccion-fotos fotos-cedula seccion-activa"><p>Cedula</p></div>
-                    <div class="seccion-fotos fotos-Boleta">Boletas</div>
-                    <div class="seccion-fotos documento-domicilio">Documento Domicilio</div>
+                    <div class="ventana fotos-cedula seccion-activa"><p>Cedula</p></div>
+                    <div class="ventana fotos-Boleta">Boletas</div>
+                    <div class="ventana documento-domicilio">Documento Domicilio</div>
                   </div>
                   <div class="fotos-seccion1">
                     <div class="card card-1">
