Se agrega un nuevo apartado para referencias. El form pasa a tener 6 partes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="container-responsive">
               <span class="responsive-step">Informacion Personal</span>
               <span class="responsive-step">Informacion Laboral</span>
+              <span class="responsive-step">Referencias</span>
               <span class="responsive-step">Direcciones</span>
               <span class="responsive-step">P.E.P</span>
               <span class="responsive-step">Fotos</span>
@@ -40,14 +41,18 @@
               </div>
               <div class="step-container">
                 <div class="progress-step">3</div>
-                <p class="info-step">Direcciones</p>
+                <p class="info-step">Referencias</p>
               </div>
               <div class="step-container">
                 <div class="progress-step">4</div>
-                <p class="info-step">P.E.P</p>
+                <p class="info-step">Direcciones</p>
               </div>
               <div class="step-container">
                 <div class="progress-step">5</div>
+                <p class="info-step">P.E.P</p>
+              </div>
+              <div class="step-container">
+                <div class="progress-step">6</div>
                 <p class="info-step">Fotos</p>
               </div>
             </div>
@@ -360,6 +365,10 @@
                     <input type="text" class="input-data input-number-corp" placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
+                </form>
+<!--  -------------------------------Inicio tercer formulario-------------------------------------->
+
+                <form class="form form-3" action="javascript:void(0);" autocomplete="off">
                   <h2 class="titulo titulo-main">Referencias Personales</h2>
                   <label>
                     <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
@@ -411,9 +420,11 @@
                     <p class="err-space"></p>
                   </label>
                 </form>
-<!--  -------------------------------Inicio tercer formulario-------------------------------- -->
 
-                <form class="form form-3" action="javascript:void(0);" autocomplete="off"  >
+
+<!-----------------------------------Inicio cuarto formulario------------------------------------->
+
+                <form class="form form-4" action="javascript:void(0);" autocomplete="off"  >
                   <h2 class="titulo titulo-main">Direccion Personal</h2>
                   <label>
                     <span class="span-input">Ciudad</span>
@@ -480,7 +491,7 @@
 
 <!-- -----------------------Inicio cuarto formulario----------------------------- -->
 
-                <form class="form form-4" action="" autocomplete="off"  >
+                <form class="form form-5" action="" autocomplete="off"  >
                   <div class="pep-1">
                     <p class="text-pep">¿En los últimos 2 años ocupaste un cargo relevante en la función pública?</p>
                     <div class="input-radio-config">
@@ -533,7 +544,7 @@
                 </form>
 
 <!-- -------------------------- fin del cuarto form ----------------------------- -->
-                <form class="form form-5" action="">
+                <form class="form form-6" action="">
                   <div class="video-container">
                     <video class="video" src=""></video>
                     <div class="loader"></div>
