Se agrega la funcion de desplegar nuevos campos en el form relacionado a las pep's

--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
                         <input class="input-data input-cargo-fam" type="text" autocapitalize="sentences">
                         <p class="err-space"></p>
                       </label>
-                      <div class="circular-button-container">
-                        <button class="circular-button">+</button>
-                      </div>
+                    </div>
+                    <div class="circular-button-container">
+                      <button type="button" class="circular-button">+</button>
                     </div>
                   </div>
                 </form>
