Se finaliza el funcionamiento del form de pep

--- a/index.html
+++ b/index.html
@@ -529,17 +529,19 @@
                       <label for="fam-pol-no">No</label>
                     </div>
                     <div class="input-pep2">
-                      <h4>Familiar 1:</h4>
-                      <label>
-                        <span class="span-input">Entidad</span>
-                        <input class="input-data input-entidad-fam" type="text" autocapitalize="words">
-                        <p class="err-space"></p>
-                      </label>
-                      <label>
-                        <span class="span-input">Cargo público ocupado</span>
-                        <input class="input-data input-cargo-fam" type="text" autocapitalize="sentences">
-                        <p class="err-space"></p>
-                      </label>
+                      <div class="container-controler">
+                        <h4>Familiar 1:</h4>
+                        <label>
+                          <span class="span-input">Entidad</span>
+                          <input class="input-data input-entidad-fam1" type="text" autocapitalize="words">
+                          <p class="err-space"></p>
+                        </label>
+                        <label>
+                          <span class="span-input">Cargo público ocupado</span>
+                          <input class="input-data input-cargo-fam1" type="text" autocapitalize="sentences">
+                          <p class="err-space"></p>
+                        </label>
+                      </div>
                     </div>
                     <div class="circular-button-container">
                       <button type="button" class="circular-button">+</button>
