--- a/index.html
+++ b/index.html
@@ -564,11 +564,11 @@
                     </div>
                   </div>
                   <div class="navbar-fotos">
-                    <div class="ventana fotos-cedula seccion-activa"><p>Cedula</p></div>
-                    <div class="ventana fotos-Boleta">Boletas</div>
-                    <div class="ventana documento-domicilio">Documento Domicilio</div>
+                    <div class="ventana"><p>Cedula</p></div>
+                    <div class="ventana">Boletas</div>
+                    <div class="ventana">Documento Domicilio</div>
                   </div>
-                  <div class="fotos-seccion1">
+                  <div class="seccion fotos">
                     <div class="card card-1">
                       <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
                       <canvas class="lienzo lienzo-1"></canvas>
@@ -588,26 +588,26 @@
                       <img class="delete-image delete-3" src="./img/red-x.webp" alt="delete3">
                     </div>
                   </div>
-                  <div class="fotos-seccion2">
-                    <div class="card card-1">
-                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-                      <canvas class="lienzo lienzo-1"></canvas>
+                  <div class="seccion boletas">
+                    <div class="card card-4">
+                      <img class="no-image no-image-4" src="./img/no-image.png" alt="no-image4">
+                      <canvas class="lienzo lienzo-4"></canvas>
                       <p class="text-card">Boleta IPS</p>
-                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                      <img class="delete-image delete-4" src="./img/red-x.webp" alt="delete4">
                     </div>
-                    <div class="card card-2">
-                      <img class="no-image no-image-2" src="./img/no-image.png" alt="no-image2">
-                      <canvas class="lienzo lienzo-2"></canvas>
+                    <div class="card card-5">
+                      <img class="no-image no-image-5" src="./img/no-image.png" alt="no-image5">
+                      <canvas class="lienzo lienzo-5"></canvas>
                       <p class="text-card">Boleta de Salario</p>
-                      <img class="delete-image delete-2" src="./img/red-x.webp" alt="delete2">
+                      <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
                     </div>
                   </div>
-                  <div class="fotos-seccion3">
-                    <div class="card card-1">
-                      <img class="no-image no-image-1" src="./img/no-image.png" alt="no-image1">
-                      <canvas class="lienzo lienzo-1"></canvas>
+                  <div class="seccion documento-domicilio">
+                    <div class="card card-6">
+                      <img class="no-image no-image-6" src="./img/no-image.png" alt="no-image6">
+                      <canvas class="lienzo lienzo-6"></canvas>
                       <p class="text-card">Documento Respaldatorio De Domicilio</p>
-                      <img class="delete-image delete-1" src="./img/red-x.webp" alt="delete1">
+                      <img class="delete-image delete-6" src="./img/red-x.webp" alt="delete6">
                     </div>
                   </div>
                 </form>
