--- a/index.html
+++ b/index.html
@@ -312,13 +312,6 @@
                         placeholder="09XXXXXXXX">
                       <p class="err-space"></p>
                     </label>
-                    <label>
-                      <span class="span-input">Ingrese el monto a solicitar</span>
-                        <input
-                          type="text"
-                          class="input-data input-credito-solicitar">
-                        <p class="err-space"></p>
-                    </label>
                 </form>
 <!--  -------------------------------inicio del segundo Formulario-------------------------------------------- -->
 
@@ -369,9 +362,9 @@
 <!--  -------------------------------Inicio tercer formulario-------------------------------------->
 
                 <form class="form form-3" action="javascript:void(0);" autocomplete="off">
-                  <h2 class="titulo titulo-main">Referencias Personales</h2>
+                  <h2 class="titulo titulo-main">Primera Referencia Personales</h2>
                   <label>
-                    <span class="span-input">Nombres y Apellidos de la Referencia Personal</span>
+                    <span class="span-input">Nombres y Apellidos</span>
                       <input
                         class="input-data input-name-ref"
                         type="text" name="username"
@@ -379,15 +372,16 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de Celular de la Primera Referencia Personal</span>
+                    <span class="span-input">Número de Celular</span>
                     <input
                       type="text"
                       class="input-data input-first-ref"
                       placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
+                  <h2 class="titulo titulo-main">Segunda Referencia Personales</h2>
                   <label>
-                    <span class="span-input">Nombre y Apellido de la Segunda Referencia Personal</span>
+                    <span class="span-input">Nombre y Apellido</span>
                       <input
                         class="input-data input-name-second-ref"
                         type="text" name="username"
@@ -395,7 +389,7 @@
                       <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de Celular de la Segunda Referencia Personal</span>
+                    <span class="span-input">Número de Celular</span>
                     <input
                       type="text"
                       class="input-data input-second-ref"
@@ -451,8 +445,8 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de casa</span>
-                    <input class="input-data numero-casa" type="text" autocapitalize="sentences">
+                    <span class="span-input">Número de Casa (Campo Opcional)</span>
+                    <input class="input-data numero-casa opcional" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
 
@@ -483,8 +477,8 @@
                     <p class="err-space"></p>
                   </label>
                   <label>
-                    <span class="span-input">Número de casa</span>
-                    <input class="input-data numero-edificio-trabajo" type="text" autocapitalize="sentences">
+                    <span class="span-input">Numero de Edificio (Opcional)</span>
+                    <input class="input-data numero-edificio-trabajo opcional" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
                 </form>
