Se agregan los campos de parentezco en el form 3

--- a/index.html
+++ b/index.html
@@ -379,6 +379,13 @@
                       placeholder="09XXXXXXXX">
                     <p class="err-space"></p>
                   </label>
+                  <label>
+                    <span class="span-input">Parentezco</span>
+                    <input
+                      type="text"
+                      class="input-data parentezco1">
+                    <p class="err-space"></p>
+                  </label>
                   <h2 class="titulo titulo-main">Segunda Referencia Personales</h2>
                   <label>
                     <span class="span-input">Nombre y Apellido</span>
@@ -394,6 +401,13 @@
                       type="text"
                       class="input-data input-second-ref"
                       placeholder="09XXXXXXXX">
+                    <p class="err-space"></p>
+                  </label>
+                  <label>
+                    <span class="span-input">Parentezco</span>
+                    <input
+                      type="text"
+                      class="input-data parentezco2">
                     <p class="err-space"></p>
                   </label>
                   <h2 class="titulo titulo-main">Referencia Comercial</h2>
