Se cambia el formato del input fecha del form 1

--- a/index.html
+++ b/index.html
@@ -268,14 +268,47 @@
                         <p class="err-space"></p>
                     </label>
                     <label>
-                      <span class="span-input">Ingrese su Fecha de Nacimiento</span>
-                        <input type="date" class="input-data input-fecha"><!--Cambio fecha input-->
+                      <span class="span-input span-fecha">Ingrese su Fecha de Nacimiento</span>
+                      <div class="fecha-container">
+                        <div class="select-container fecha">
+                          <select class="select-dia input-data">
+                            <option value="">Día</option>
+                          </select>
+                        </div>
+                        <div class="select-container fecha">
+                          <select class="select-mes input-data">
+                            <option value="" class="option-invalid">Mes</option>
+                            <option value="enero" class="select-option">Enero</option>
+                            <option value="febrero" class="select-option">Febrero</option>
+                            <option value="marzo" class="select-option">Marzo</option>
+                            <option value="abril" class="select-option">Abril</option>
+                            <option value="mayo" class="select-option">Mayo</option>
+                            <option value="junio" class="select-option">Junio</option>
+                            <option value="julio" class="select-option">Julio</option>
+                            <option value="agosto" class="select-option">Agosto</option>
+                            <option value="septiembre" class="select-option">Septiembre</option>
+                            <option value="octubre" class="select-option">Octubre</option>
+                            <option value="noviembre" class="select-option">Noviembre</option>
+                            <option value="diciembre" class="select-option">Diciembre</option>
+                          </select> 
+                        </div>
+                        <div class="select-container fecha">
+                          <select class="select-year input-data">
+                            <option value="">Año</option>
+                          </select>
+                        </div>
+                      </div>
+                      <!-- <select class="select-mes input-data"></select>
+                      <select class="select-year input-data"></select> -->
+                        <!-- <select type="select" class="input-data select-dia">
+                        <select type="select" class="input-data select-mes">
+                        <select type="select" class="input-data select-year"> -->
                         <p class="err-space"></p>
                     </label>
                     <label>
                       <span class="span-input">Seleccione su Sexo</span>
                         <div class="select-container">
-                          <select class="select-genero input-data" name="genero" id="">
+                          <select class="select select-genero input-data" name="genero" id="">
                             <option value="" selected></option>
                             <option class="select-option selected" value="Masculino">Masculino</option>
                             <option class="select-option selected" value="Femenino">Femenino</option>
