Cambios a la hoja de estilos

--- a/index.html
+++ b/index.html
@@ -517,16 +517,18 @@
                     <input class="input-data input-dir" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
-                  <label>
-                    <span class="span-input">Calle 1</span>
-                    <input class="input-data input-calle1" type="text" autocapitalize="sentences">
-                    <p class="err-space"></p>
-                  </label>
-                  <label>
-                    <span class="span-input">Calle 2</span>
-                    <input class="input-data input-calle2" type="text" autocapitalize="sentences">
-                    <p class="err-space"></p>
-                  </label>
+                  <div class="flex-container">
+                    <label class="calle">
+                      <span class="span-input">Calle 1</span>
+                      <input class="input-data input-calle1" type="text" autocapitalize="sentences">
+                      <p class="err-space"></p>
+                    </label>
+                    <label class="calle">
+                      <span class="span-input">Calle 2</span>
+                      <input class="input-data input-calle2" type="text" autocapitalize="sentences">
+                      <p class="err-space"></p>
+                    </label>
+                  </div>
                   <label>
                     <span class="span-input">Número de Casa (Campo Opcional)</span>
                     <input class="input-data numero-casa opcional" type="text" autocapitalize="sentences">
@@ -549,16 +551,18 @@
                     <input class="input-data input-dir-trabajo" type="text" autocapitalize="sentences">
                     <p class="err-space"></p>
                   </label>
-                  <label>
-                    <span class="span-input">Calle 1</span>
-                    <input class="input-data input-calle1-trabajo" type="text" autocapitalize="sentences">
-                    <p class="err-space"></p>
-                  </label>
-                  <label>
-                    <span class="span-input">Calle 2</span>
-                    <input class="input-data input-calle2-trabajo" type="text" autocapitalize="sentences">
-                    <p class="err-space"></p>
-                  </label>
+                  <div class="flex-container">
+                    <label class="calle">
+                      <span class="span-input">Calle 1</span>
+                      <input class="input-data input-calle1-trabajo" type="text" autocapitalize="sentences">
+                      <p class="err-space"></p>
+                    </label>
+                    <label class="calle">
+                      <span class="span-input">Calle 2</span>
+                      <input class="input-data input-calle2-trabajo" type="text" autocapitalize="sentences">
+                      <p class="err-space"></p>
+                    </label>
+                  </div>
                   <label>
                     <span class="span-input">Numero de Edificio (Opcional)</span>
                     <input class="input-data numero-edificio-trabajo opcional" type="text" autocapitalize="sentences">
@@ -607,7 +611,7 @@
                     </div>
                     <div class="input-pep2">
                       <div class="container-controler">
-                        <h4>Familiar 1:</h4>
+                        <h4 class="numero-familia">Familiar 1:</h4>
                         <label>
                           <span class="span-input">Entidad</span>
                           <input class="input-data input-entidad-fam1" type="text" autocapitalize="words">
