Carga de documentos

--- a/index.html
+++ b/index.html
@@ -691,6 +691,13 @@
                       <img class="delete-image delete-6" src="./img/red-x.webp" alt="delete6">
                     </div>
                   </div>
+                  <div class="drop-area">
+                    <h2>Arrastra y suelta los documentos</h2>
+                    <h3>O</h3>
+                    <button type="button">Selecciona tus archivos</button>
+                    <input type="file" name="" id="input-file" hidden multiple>
+                  </div>
+                  <div id="preview"></div>
                 </form>
 
 <!-- -------------------------------Fin del Form-5-------------------------------- -->
