Se agregan las funciones a los botones de voler para elegir el tipo de cliente

--- a/index.html
+++ b/index.html
@@ -688,6 +688,7 @@
                         <p class="text-card">Boleta de Salario</p>
                         <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
                       </div>
+                      <button class="button-red button-volver-asalariado">Volver</button>
                     </div>
                     <div class="archivos-boletas">
                       <div class="drop-area">
@@ -697,8 +698,9 @@
                         <input type="file" name="" id="input-file" hidden multiple>
                       </div>
                       <div id="preview"></div>
+                      <button class="button-red button-volver-comerciante">Volver</button>
                     </div>
-                    </div>
+                  </div>
                   <div class="seccion documento-domicilio">
                     <div class="card card-6">
                       <img class="no-image no-image-6" src="./img/no-image.png" alt="no-image6">
