Correccion de errores en el form 6

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                         <p class="text-card">Boleta de Salario</p>
                         <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
                       </div>
-                      <button class="button-red button-volver-asalariado">Volver</button>
+                      <button type="button" class="button-red button-volver-asalariado">Volver</button>
                     </div>
                     <div class="archivos-boletas">
                       <div class="drop-area">
@@ -698,7 +698,7 @@
                         <input type="file" name="" id="input-file" hidden multiple>
                       </div>
                       <div id="preview"></div>
-                      <button class="button-red button-volver-comerciante">Volver</button>
+                      <button type="button" class="button-red button-volver-comerciante">Volver</button>
                     </div>
                   </div>
                   <div class="seccion documento-domicilio">
@@ -712,7 +712,7 @@
 
                 </form>
 
-<!-- -------------------------------Fin del Form-5-------------------------------- -->
+<!-- -------------------------------Fin del Form-6-------------------------------- -->
 
             </div>
             <div class="button-container">
