Se agrega un contenedor al boton de volver en el formulario-6

--- a/index.html
+++ b/index.html
@@ -688,7 +688,9 @@
                         <p class="text-card">Boleta de Salario</p>
                         <img class="delete-image delete-5" src="./img/red-x.webp" alt="delete5">
                       </div>
-                      <button type="button" class="button-red button-volver-asalariado">Volver</button>
+                      <div class="asalariado-volver-contenedor">
+                        <button type="button" class="button-red button-volver-asalariado">Volver</button>
+                      </div>
                     </div>
                     <div class="archivos-boletas">
                       <div class="drop-area">
@@ -698,7 +700,9 @@
                         <input type="file" name="" id="input-file" hidden multiple>
                       </div>
                       <div id="preview"></div>
-                      <button type="button" class="button-red button-volver-comerciante">Volver</button>
+                      <div class="comerciante-volver-contenedor">
+                        <button type="button" class="button-red button-volver-comerciante">Volver</button>
+                      </div>
                     </div>
                   </div>
                   <div class="seccion documento-domicilio">
