Mejoras en el apartado de Confirmacion

--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
                 <p class="info-text">Respuesta: </p>
                 <p class="info"></p>
                 <div class="pep-fam-confirm">
-                  <p class="info-text">Entidad:</p>
+                  <!-- <p class="info-text">Entidad:</p>
                   <p class="info-pep-fam"></p>
                   <p class="info-text">Cargo ocupado:</p>
-                  <p class="info-pep-fam"></p>
+                  <p class="info-pep-fam"></p> -->
                 </div>
               </div>
               <div class="info-section">
@@ -242,6 +242,18 @@
               <div class="info-section">
                 <p class="info-text">Selfie:</p>
                 <img src="" alt="selfie-confirm" class="selfie-confirm">
+              </div>
+              <div class="info-section">
+                <p class="info-text">Boleta de IPS:</p>
+                <img src="" alt="boleta-ips" class="boleta-ips">
+              </div>
+              <div class="info-section">
+                <p class="info-text">Boleta de Salario:</p>
+                <img src="" alt="boleta-salario" class="boleta-salario">
+              </div>
+              <div class="info-section">
+                <p class="info-text">Documento de Domicilio:</p>
+                <img src="" alt="domicilio" class="domicilio">
               </div>
             </div>
           </section>
@@ -671,7 +683,7 @@
                   </div>
                   <div class="seccion boletas">
                     <div class="card card-options-client">
-                      <h3>Seleccione el tipo de Cliente:</h3>
+                      <p>Seleccione el tipo de Cliente:</p>
                       <button type="button" class="button button-red button-asalariado">Asalariado</button>
                       <button type="button" class="button button-red button-comerciante">Comerciante</button>
                     </div>
