Se finaliza el apartado de confirmacion luego de los formularios

--- a/index.html
+++ b/index.html
@@ -228,9 +228,12 @@
             </div>
 
             <div class="titulo titulo-confirm">
-              <h3>Fotos</h3>
+              <h3>Fotos y Documentos</h3>
             </div>
             <div class="card-confirm">
+              <div class="titulo titulo-confirm">
+                <h4>Fotos de Cedula</h6>
+              </div>
               <div class="info-section">
                 <p class="info-text">Primera Foto:</p>
                 <img class="foto-frontal-confirm" src="" alt="foto-frontal-confirm">
@@ -243,15 +246,48 @@
                 <p class="info-text">Selfie:</p>
                 <img src="" alt="selfie-confirm" class="selfie-confirm">
               </div>
-              <div class="info-section">
-                <p class="info-text">Boleta de IPS:</p>
-                <img src="" alt="boleta-ips" class="boleta-ips">
+              <div class="boletas-container">
+                <div class="titulo titulo-confirm">
+                  <h3>Foto de las Boletas</h3>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Boleta de IPS:</p>
+                  <img src="" alt="boleta-ips" class="boleta-ips">
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Boleta de Salario:</p>
+                  <img src="" alt="boleta-salario" class="boleta-salario">
+                </div>
+              </div>
+              <div class="archivos-container">
+                <div class="titulo titulo-confirm">
+                  <h4>Archivos Subidos</h3>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Archivo 1:</p>
+                  <p class="info-doc1"></p>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Archivo 2:</p>
+                  <p class="info-doc2"></p>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Archivo 3:</p>
+                  <p class="info-doc3"></p>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Archivo 4:</p>
+                  <p class="info-doc4"></p>
+                </div>
+                <div class="info-section">
+                  <p class="info-text">Archivo 5:</p>
+                  <p class="info-doc5"></p>
+                </div>
               </div>
               <div class="info-section">
-                <p class="info-text">Boleta de Salario:</p>
-                <img src="" alt="boleta-salario" class="boleta-salario">
-              </div>
-              <div class="info-section">
+                <div class="titulo titulo-confirm">
+                  <h4>Documento de Domicilio</h3>
+                </div>
                 <p class="info-text">Documento de Domicilio:</p>
                 <img src="" alt="domicilio" class="domicilio">
               </div>
