Se agrega la validacion para la mayoria de edad

--- a/index.html
+++ b/index.html
@@ -329,18 +329,18 @@
                           <div class="select-container">
                             <select class="select-mes input-data">
                               <option value="" class="option-invalid">Mes</option>
-                              <option value="enero" class="select-option">Enero</option>
-                              <option value="febrero" class="select-option">Febrero</option>
-                              <option value="marzo" class="select-option">Marzo</option>
-                              <option value="abril" class="select-option">Abril</option>
-                              <option value="mayo" class="select-option">Mayo</option>
-                              <option value="junio" class="select-option">Junio</option>
-                              <option value="julio" class="select-option">Julio</option>
-                              <option value="agosto" class="select-option">Agosto</option>
-                              <option value="septiembre" class="select-option">Septiembre</option>
-                              <option value="octubre" class="select-option">Octubre</option>
-                              <option value="noviembre" class="select-option">Noviembre</option>
-                              <option value="diciembre" class="select-option">Diciembre</option>
+                              <option value="1" class="select-option">Enero</option>
+                              <option value="2" class="select-option">Febrero</option>
+                              <option value="3" class="select-option">Marzo</option>
+                              <option value="4" class="select-option">Abril</option>
+                              <option value="5" class="select-option">Mayo</option>
+                              <option value="6" class="select-option">Junio</option>
+                              <option value="7" class="select-option">Julio</option>
+                              <option value="8" class="select-option">Agosto</option>
+                              <option value="9" class="select-option">Septiembre</option>
+                              <option value="10" class="select-option">Octubre</option>
+                              <option value="11" class="select-option">Noviembre</option>
+                              <option value="12" class="select-option">Diciembre</option>
                             </select> 
                           </div>
                           <p class="err-space"></p>
@@ -354,7 +354,7 @@
                           <p class="err-space"></p>
                         </label>
                       </div>
-                        <!-- <p class="err-space"></p> -->
+                        <p class="err-fecha-nacimiento"></p>
                     <label>
                       <span class="span-input">Seleccione su Sexo</span>
                         <div class="select-container">
