Se agrega la validacion para el tiempo en la empresa

--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
                       <p class="err-space"></p>
                     </label>
                   </div>
+                  <p class="err-fecha-entrada"></p>
                   <label>
                     <span class="span-input">Ingrese su número de celular corporativo</span>
                     <input type="text" class="input-data input-number-corp" placeholder="09XXXXXXXX">
