Mejoras en el formulario

--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
                       </div>
                     </div>
                     <div class="circular-button-container">
+                      <button type="button" class="circular-button-delete">-</button>
                       <button type="button" class="circular-button">+</button>
                     </div>
                   </div>
