Finalizacion del apartado de pep's

--- a/index.html
+++ b/index.html
@@ -663,12 +663,12 @@
                         <h4 class="numero-familia">Familiar 1:</h4>
                         <label>
                           <span class="span-input">Entidad</span>
-                          <input class="input-data input-entidad-fam1" type="text" autocapitalize="words">
+                          <input class="input-data input-entidad-fam1 input-pep-validation-entidad" type="text" autocapitalize="words">
                           <p class="err-space"></p>
                         </label>
                         <label>
                           <span class="span-input">Cargo público ocupado</span>
-                          <input class="input-data input-cargo-fam1" type="text" autocapitalize="sentences">
+                          <input class="input-data input-cargo-fam1 input-pep-validation-cargo" type="text" autocapitalize="sentences">
                           <p class="err-space"></p>
                         </label>
                       </div>
